# LaborConnect

./: Screen Recording 2026-02-10 at 11.04.13ΓÇ»PM.mov  package-lock.json
backend/: README.md  __init__.py  config.py  firebase_client.py  laborconnect-48765-firebase-adminsdk-fbsvc-b609272128.json  main.py  models.py  pyproject.toml  requirements.txt  routes_workers.py
