[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "laborconnect-backend"
version = "0.1.0"
description = "FastAPI backend for the LaborConnect mobile application."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "LaborConnect", email = "dev@example.com" },
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "python-dotenv",
  "firebase-admin",
]

[project.optional-dependencies]
dev = [
  "httpx",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

